fix email form on tablet

--- a/assets/_source/stylesheets/_layout.header.scss
+++ b/assets/_source/stylesheets/_layout.header.scss
@@ -21,8 +21,12 @@
 
 .c-subscribeForm {
     position: absolute;
-    right: 0;
+    right: space(1);
     top: space(1);
+
+    @include media-breakpoint-up(lg) {
+        right: 0;
+    }
 }
 
 .c-nav {
