--- a/assets/_source/stylesheets/_object.container.scss
+++ b/assets/_source/stylesheets/_object.container.scss
@@ -25,7 +25,7 @@
 	}
 
 	@include media-breakpoint-up(sm) {
-		padding: 0;
+		//padding: 0;
 	}
 }
 
